# snake

./: Cargo.toml  README.md
src/: food.rs  lib.rs  main.rs  player.rs  snake.rs  tail.rs  ui.rs
